--- a/JKNL_Engine/JKNL_Engine.vcxproj
+++ b/JKNL_Engine/JKNL_Engine.vcxproj
@@ -11,12 +11,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\JKNL\Log.h" />
     <ClInclude Include="src\JKNL.h" />
     <ClInclude Include="src\JKNL\Application.h" />
     <ClInclude Include="src\JKNL\core.h" />
     <ClInclude Include="src\JKNL\EntryPoint.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\JKNL\Log.cpp" />
     <ClCompile Include="src\JKNL\Application.cpp" />
     <ClCompile Include="src\JKNL\core.cpp" />
   </ItemGroup>
@@ -70,6 +72,7 @@
       <PreprocessorDefinitions>JKNL_BUILD_DLL;JKNL_PLATFORM_WINDOWS;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)JKNL_Engine\thirdparty\spdlog\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -85,6 +88,7 @@
       <PreprocessorDefinitions>JKNL_BUILD_DLL;JKNL_PLATFORM_WINDOWS;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)JKNL_Engine\thirdparty\spdlog\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
