--- a/JKNL_Engine/JKNL_Engine.vcxproj
+++ b/JKNL_Engine/JKNL_Engine.vcxproj
@@ -79,7 +79,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>JKNL_BUILD_DLL;JKNL_PLATFORM_WINDOWS;JKNL_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>thirdparty\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;thirdparty\spdlog\include;thirdparty\json11;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -99,7 +99,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>JKNL_BUILD_DLL;JKNL_PLATFORM_WINDOWS;JKNL_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>thirdparty\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;thirdparty\spdlog\include;thirdparty\json11;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -123,7 +123,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>JKNL_BUILD_DLL;JKNL_PLATFORM_WINDOWS;JKNL_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>thirdparty\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;thirdparty\spdlog\include;thirdparty\json11;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -146,13 +146,21 @@
     <ClInclude Include="src\JKNL.h" />
     <ClInclude Include="src\JKNL\Application.h" />
     <ClInclude Include="src\JKNL\EntryPoint.h" />
+    <ClInclude Include="src\JKNL\Events\ApplicationEvent.h" />
+    <ClInclude Include="src\JKNL\Events\Event.h" />
+    <ClInclude Include="src\JKNL\Events\KeyEvent.h" />
+    <ClInclude Include="src\JKNL\Events\MouseEvevt.h" />
     <ClInclude Include="src\JKNL\Log.h" />
+    <ClInclude Include="src\JKNL\Reflection\reflection.h" />
     <ClInclude Include="src\JKNL\core.h" />
+    <ClInclude Include="src\JKNL\json.h" />
+    <ClInclude Include="thirdparty\json11\json11.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\JKNL\Application.cpp" />
     <ClCompile Include="src\JKNL\Log.cpp" />
-    <ClCompile Include="src\JKNL\core.cpp" />
+    <ClCompile Include="src\JKNL\Reflection\reflection.cpp" />
+    <ClCompile Include="thirdparty\json11\json11.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
