--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "JKNL_Engine/thirdparty/spdlog"]
 	path = JKNL_Engine/thirdparty/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "JKNL_Engine/thirdparty/GLFW"]
+	path = JKNL_Engine/thirdparty/GLFW
+	url = https://github.com/glfw/glfw
