--- a/JKNL_Engine/JKNL_Engine.vcxproj
+++ b/JKNL_Engine/JKNL_Engine.vcxproj
@@ -154,14 +154,17 @@
     <ClInclude Include="src\JKNL\Events\KeyEvent.h" />
     <ClInclude Include="src\JKNL\Events\MouseEvevt.h" />
     <ClInclude Include="src\JKNL\Log.h" />
-    <ClInclude Include="src\JKNL\Reflection\reflection.h" />
+    <ClInclude Include="src\JKNL\Window\Window.h" />
+    <ClInclude Include="src\JKNL\Window\WindowBase.h" />
     <ClInclude Include="src\JKNL\core.h" />
     <ClInclude Include="src\JKNL\json.h" />
+    <ClInclude Include="src\jknlpch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\JKNL\Application.cpp" />
     <ClCompile Include="src\JKNL\Log.cpp" />
-    <ClCompile Include="src\JKNL\Reflection\reflection.cpp" />
+    <ClCompile Include="src\JKNL\Window\Window.cpp" />
+    <ClCompile Include="src\jknlpch.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="thirdparty\GLFW\GLFW.vcxproj">
